argocd/workflow-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workflow-test
spec:
  template:
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: workflow-test
          image: workflow-test
          ports:
            - containerPort: 8080
              protocol: TCP
          securityContext:
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
