argocd/workflow-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workflow-test
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
